--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,17 @@
 /* Add CSS Styling */
+.numRed{
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+    background-color: #ec6f6f76;
+}
+#idBlue{
+    color: blue;
+    font-size: 36px;
+}
+#idGreen{
+    font-size: 24px;
+    background-color: lightgreen;
+    font-weight: 700;
+}
+.cooler{
+    font-size: 24px;
+}
