--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -23,4 +25,45 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+.header{
+  display: flex;
+  justify-content:space-between;
+  padding: 16px;
+}
+.left-links, .right-links{
+  display:flex;
+  gap: 8px;
+  list-style-type: none;
+  
+}
+a{
+  text-decoration: none;
+  color: grey
+}
+.content{
+  display: flex;
+  flex:1;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap:16px;
+}
+button{
+  /* display: flex; */
+  /* margin-top: 20px; */
+  /* align-items: center; */
+  /* gap: 16px; */
+  padding: 8px 16px;
+}
+.footer{
+  
+  display:flex;
+  justify-content: space-between;
+  background-color: #eee;
+  padding:16px;
+}
+ul{
+  margin:0;
+  padding:0;
 }
