--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,50 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+body{
+  display: flex;
+  flex-direction: column;
+}
+.container{
+  display: flex;
+  flex:1;
+}
+.header{
+  display: flex;
+  align-items:center;
+  padding: 0 16px;
+  font-size: 32px;
+  font-weight: 900;
+}
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+}
+.sidebar{
+  flex-shrink: 0;
+  padding: 16px;
+}
+li{
+  margin-bottom: 16px;
+}
+.content{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+  gap: 32px;
+}
+.card{
+  padding:16px;
+  width: 300px;
+}
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
