--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -46,3 +46,29 @@ html {
   color: white;
   text-align: left;
 }
+.container{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 15px;
+}
+.header{
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+}
+.sidebar{
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+.nav{
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+.article{
+  grid-column: 2/4;
+  grid-row: 3/4;
+}
+.footer{
+  grid-column: 1/4;
+  grid-row: 4/5;
+}
