--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 5px;
 }
 
 .container div {
@@ -14,11 +17,22 @@
   font-weight: bold;
   color: white;
 }
-
+.logo{
+  justify-self: start;
+}
 .header {
   background-color: #393f4d;
+  grid-column: 1/-1;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
-
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  list-style-type: none;
+  gap: 20px;
+  padding: 10px;
+}
 .menu ul,
 .menu li {
   font-size: 16px;
@@ -26,6 +40,13 @@
 
 .sidebar {
   background-color: #C50208;
+  grid-row: 2/4;
+  display: grid;
+  gap: 50px;
+}
+.side-content, .photo{
+  display: grid;
+  align-items: center;
 }
 
 .sidebar .photo {
@@ -46,15 +67,28 @@
 
 .nav {
   background-color: #C50208;
+  grid-row: 2;
+  grid-column: 2/-1;
+}
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2/3;
+  grid-row: 3/4;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: auto auto;
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +102,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +118,8 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/-1;
+  grid-row: 4/7;
 }
 
 .footer p {
